syntax = "proto3";

package co.edu.uniandes.notificador; 
option go_package = "./proto";

service Notificador {
  // Asegúrate que el nombre del RPC también sea idéntico
  rpc EnviarNotificacion (MatchRequest) returns (NotificacionResponse);
}

message MatchRequest {
  // Datos de Negocio
  int64 orden_id = 1;      // Renombrado para coincidir semánticamente con Java (ordenId)
  int64 producto_id = 2;   // long en Java
  int32 cantidad = 3;      // int en Java
  int32 tipo = 4;          // byte en Java (se mapea a int32 en proto)

  // Trazabilidad de Latencia (Nanosegundos para precisión LMAX)
  int64 ts_engine_match = 5; // Alineado con Java (campo 5)
  int64 ts_api_salida = 6;
  int64 ts_api_recepcion = 7; // Alineado con Java (campo 7)
}

message NotificacionResponse {
  string mensaje = 1; // Alineado con Java
  bool exito = 2;     // Alineado con Java
}